11/26/2002
	- Fix a bug where looking up names without trailing dots
	  would fail if there was no searchlist.

10/31/2002
	- Fix a bug in searchlist processing on Windows.

10/20/2002
	- Record.toWire() and Record.toWireCanonical() do not need to
	  be declared as throwing IOException, since there's no
	  legitimate reason for them to throw one.

10/18/2002
	- Race condition fixes and memory usage improvements to the
	  NameSet class, used by Cache and Zone.

10/16/2002
	- 1.3.0 released.

10/11/2002
	- Add Name.getLabel()

10/10/2002
	- When cleaning the cache, catch ConcurrentModificationExceptions.

10/8/2002
	- Cleanups to Cache.addMessage() and the Credibility code.

10/7/2002
	- Fix problems with search path handling in the dns class.
	- Possible race condition fixes to the Cache code.

10/6/2002
	- Fix minor bugs in Name code (Bob Halley <bob.halley@nominum.com>)
	  
10/1/2002
	- Memory usage and speed improvements to the TypeMap class.

9/25/2002
	- Add the verbosecache option.
	- Significant memory usage improvements to the Name class.

9/23/2002
	- Memory usage improvements to the ARecord class.

9/16/2002
	- Support for NetWare's sys:/etc/resolv.cfg file.
	  (Scott Villinski <scott@villinski.com>)

9/5/2002
	- When looking for an rdataset in a zone or cache, seeing a CNAME
	  above the name is not an error.
	  (reported by Andrew Houghton <aah@volunteermatch.org>)

8/31/2002
	- Changed the code that dynamically loads record types; hopefully
	  this will solve some of the mysterious problems that I think
	  are related to non-English versions of Windows.
	- Clean up the Name code.

8/28/2002
	- Remove support for bitstring labels, since they're now deprecated.

8/16/2002
	- Address.isDottedQuad didn't check to see if the input String
	  contained characters after an IP address.
	  (Marcos Sanz <sanz@denic.de>)

8/11/2002
	- Querying for a nonexistant name with exactly one label didn't return.

8/10/2002